# Mercurial-Player

./: .gitignore  GEMINI.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: ci-cd.yml
plugins/lyrics-share/: index.js  manifest.json
src/: App.vue  i18n.ts  main.js  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_decoder.rs  audio_device.rs  commands.rs  config.rs  error.rs  filesystem.rs  lib.rs  main.rs  playback.rs  update_manager.rs  wasapi_exclusive.rs  wasapi_player.rs  window_commands.rs
src-tauri/src/audio/: commands.rs  decoder.rs  device.rs  device_monitor.rs  mod.rs  playback.rs
src-tauri/src/audio/wasapi/: exclusive.rs  mod.rs  player.rs
src-tauri/src/config/: commands.rs  manager.rs  mod.rs
src-tauri/src/equalizer/: commands.rs  mod.rs  processor.rs
src-tauri/src/media/: commands.rs  filesystem.rs  http_client.rs  metadata.rs  mod.rs  netease.rs
src-tauri/src/plugins/: commands.rs  manager.rs  mod.rs
src-tauri/src/system/: commands.rs  fonts.rs  mod.rs
src-tauri/src/taskbar/: commands.rs  desktop_lyrics.rs  mod.rs  windows_impl.rs
src-tauri/src/update/: commands.rs  mod.rs
src/assets/css/: lyrics-classic.css  lyrics-display.css  lyrics-modern.css
src/components/: AudioDeviceSettings.vue  EqualizerSettings.vue  LyricsDisplay.vue  MD3Select.vue  MiniPlayer.vue  MusicLibrary.vue  PlayerControls.vue  PlaylistView.vue  ProgressBar.vue  Settings.vue  ThemeSelector.vue  UpdateDialog.vue  VisualizerPanel.vue
src/components/settings/: AboutSettings.vue  FolderSettings.vue  GeneralSettings.vue  LyricsSettings.vue  PlayStatsSettings.vue  PlaylistSettings.vue  PluginSettings.vue  SettingsNav.vue  TitleExtractionSettings.vue  index.js
src/composables/: useAutoUpdate.ts  useErrorNotification.js  useErrorNotification.ts  useLyrics.js  useLyrics.ts  useTrackInfo.js  useTrackInfo.ts
src/locales/: en.json  zh.json
src/plugins/: PLUGIN_DEVELOPMENT.md  index.js  pluginAPI.js  pluginAPI.ts  pluginLoader.js  pluginLoader.ts  pluginManager.js  pluginManager.ts  pluginSandbox.js  pluginSandbox.ts  shortcutManager.ts
src/plugins/builtins/: index.js  index.ts  playCount.js  playCount.ts
src/stores/: config.js  config.ts  musicLibrary.js  musicLibrary.ts  player.js  player.ts  theme.js  theme.ts
src/types/: index.ts
src/utils/: audioErrorClassifier.ts  colorContrast.js  colorContrast.ts  errorHandler.js  errorHandler.ts  fileUtils.js  fileUtils.ts  logger.js  logger.ts  lyricsParser.js  lyricsParser.ts  markdownRenderer.ts  neteaseApi.js  neteaseApi.ts  playlistManager.js  playlistManager.ts  themeContrastValidator.js  themeContrastValidator.ts  titleExtractor.js  titleExtractor.ts
tests/stores/: player.playbackError.test.ts
tests/utils/: audioErrorClassifier.test.ts
