[package]
name = "mercurial-player"
version = "1.0.0-1"
description = "A music player by JDBeWL"
authors = ["jdbEwl"]
license = "GPL-3.0"
repository = "https://github.com/JDBeWL/Mercurial-Player"
edition = "2024"
rust-version = "1.92"
default-run = "mercurial-player"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.21", default-features = false, features = ["playback"] }
cpal = "0.16"
dirs = "6"
walkdir = "2"
lofty = "0.22"
base64 = "0.22"
# 启用Symphonia所有格式和编解码器
symphonia = { version = "0.5", features = ["all", "opt-simd"] }
rubato = "0.15"
rayon = "1"
spectrum-analyzer = "1.7"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.3"
crossbeam-channel = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"
aes = "0.8"
md5 = "0.7"

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
winreg = "0.52"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
] }

[lints.rust]
unsafe_code = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
keyword_idents_2024 = "forbid"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
# 基础lint组
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Tauri框架限制
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"  # Tauri命令需要owned类型
must_use_candidate = "allow"      # Tauri命令返回值由框架处理
# 音频处理常见模式
cast_precision_loss = "allow"     # u32 -> f32在音频处理中常见
cast_possible_truncation = "allow" # 频率显示截断是预期行为
cast_sign_loss = "allow"          # 频率值总是正数
cast_lossless = "allow"           # 音频代码中类型转换很常见
suboptimal_flops = "allow"        # 保持代码可读性
inline_always = "allow"           # 音频热路径需要内联
# 启动代码
expect_used = "allow"             # 启动时panic是合理的
unwrap_used = "allow"             # RwLock在单线程场景下安全
# 框架生成代码
large_stack_frames = "allow"      # Tauri宏生成
too_many_lines = "allow"          # main函数需要初始化很多东西
used_underscore_binding = "allow" # Tauri setup回调
# 代码风格偏好
collapsible_if = "allow"          # 有时分开写更清晰
collapsible_else_if = "allow"     # 有时分开写更清晰
too_many_arguments = "allow"      # 音频处理函数需要多参数
items_after_statements = "allow"  # 常量定义在使用处附近更清晰
significant_drop_tightening = "allow" # Mutex guard生命周期由编译器管理
ref_option = "allow"              # &Option<T>在某些场景更方便
match_same_arms = "allow"         # 有时显式写出更清晰
type_complexity = "allow"         # 音频初始化返回复杂类型
similar_names = "allow"           # decoder/decoded等名称相似但含义不同
unreadable_literal = "allow"      # 采样率数字不需要分隔符
option_if_let_else = "allow"      # match有时比map_or_else更清晰
or_fun_call = "allow"             # ok_or比ok_or_else更简洁
missing_const_for_fn = "allow"    # 不是所有函数都需要const
field_reassign_with_default = "allow" # 有时分步赋值更清晰
default_trait_access = "allow"    # Default::default()是惯用写法
needless_continue = "allow"       # 显式continue有时更清晰
needless_range_loop = "allow"     # 索引循环在音频处理中常见
manual_let_else = "allow"         # match有时比let else更清晰
semicolon_if_nothing_returned = "allow" # 风格偏好
if_not_else = "allow"             # 风格偏好
manual_midpoint = "allow"         # 简单算术更直观
unnecessary_map_or = "allow"      # map_or有时更清晰
derivable_impls = "allow"         # 显式Default实现更清晰
unused_self = "allow"             # 保持API一致性
doc_markdown = "allow"            # 中文文档不需要反引号
redundant_closure = "allow"       # 闭包有时更清晰
redundant_closure_for_method_calls = "allow" # 闭包有时更清晰
map_unwrap_or = "allow"           # map().unwrap_or()有时更清晰
unnested_or_patterns = "allow"    # 分开写有时更清晰
useless_format = "allow"          # format! 用于一致性
# 额外的严格检查
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "mercurial-player"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
